--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ branches:
   - master
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash) -J 'XLion'
+  - bash <(curl -s https://codecov.io/bash)
